--- a/community.html
+++ b/community.html
@@ -18,18 +18,21 @@
     <a href="">Link</a></li>
 	</nav>
 
-<div class="container">
+<div class="main-image">
 <img src="images/bkg_06.jpg" alt="Placeholder Image">
-<h1><span>Community Title</span></h1>
+<h1><span>Community Conversation: Bike Lanes</span></h1>
 </div>
 
 <main class="content">
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in leo orci. Morbi et enim vel lectus sollicitudin cursus. Nam dui est, accumsan at nulla sit amet, ultricies lacinia ex. Nam pellentesque metus dolor, ac blandit quam convallis sed. Nam in sem luctus, congue sem non, varius lacus. Nulla convallis tristique dapibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce consequat, velit eu ultrices vehicula, libero eros accumsan tortor, a euismod nulla magna vel arcu. Morbi a libero convallis nulla tincidunt scelerisque. Vestibulum eros nisi, sollicitudin at venenatis sit amet, finibus eu erat. Curabitur imperdiet neque eu nunc blandit, non luctus ligula malesuada. Fusce non interdum dui. Pellentesque a est sapien. Nullam et varius urna. Donec ultrices ante in arcu ornare venenatis. Phasellus blandit porttitor aliquam. In hac habitasse platea dictumst. Fusce scelerisque felis vitae ullamcorper sagittis. Nunc dapibus faucibus aliquam. Proin tempor ligula nec semper porta. Vestibulum pharetra lacinia mauris, sit amet posuere ante. Donec viverra tellus eu consequat finibus. Nulla accumsan eleifend lectus, non mollis arcu cursus id. Vivamus faucibus, lacus vel malesuada dictum, urna lectus volutpat nulla, at condimentum metus lorem et velit. Nulla semper quam quis vehicula tristique. Nam vel diam tempus nunc cursus imperdiet. Vestibulum ornare pretium placerat. Curabitur at condimentum risus. Praesent egestas mi vitae scelerisque fermentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget volutpat nibh. Nullam euismod arcu eget commodo pellentesque. Aliquam malesuada nisi egestas placerat lacinia. Morbi mauris lacus, faucibus luctus elit in, semper ornare leo. Duis aliquet velit quis ante aliquet, sed consectetur arcu sollicitudin. Morbi diam nibh, sagittis vitae erat in, posuere ultricies erat. Cras ullamcorper et sem ut ultricies. Ut tincidunt suscipit ante quis vestibulum. Proin massa nisi, pharetra in lobortis non, hendrerit in arcu. Pellentesque sodales neque ac felis feugiat aliquet. Nam quis enim id magna convallis consequat sed ut lacus. Mauris quis est at eros placerat efficitur. Quisque varius urna a sem mollis fermentum ultrices at nisi. Donec sagittis justo elementum, sollicitudin lacus sed, posuere nulla. Quisque eu lobortis sapien, eget tincidunt arcu. Etiam sollicitudin eleifend ante, sed aliquet sem porta mollis. Nam posuere risus odio, ac malesuada eros elementum eget. Aenean tempor vel odio at imperdiet.</p>
-</main>
 
-<div class="article-listing">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in leo orci. Morbi et enim vel lectus sollicitudin cursus. Nam dui est, accumsan at nulla sit amet, ultricies lacinia ex. Nam pellentesque metus dolor, ac blandit quam convallis sed. Nam in sem luctus, congue sem non, varius lacus.</p>
+<div class="article-listings">
+<a href="" class="article">Article link</a>
+<a href="" class="article">Article link</a>
+<a href="" class="article">Article link</a>
+<a href="" class="article">Article link</a>
 </div>
+</main>
 
 </body>
 </html>
