--- a/community.html
+++ b/community.html
@@ -19,7 +19,7 @@
 	</nav>
 
 <div class="main-image">
-<img src="images/bkg_06.jpg" alt="Placeholder Image">
+<img src="images/bike-lane.jpg" alt="Bike Lane">
 <h1><span>Community Conversation: Bike Lanes</span></h1>
 </div>
 
